@@ -4,9 +4,7 @@ import org.analyzer.logs.service.management.LogsManagementService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.actuate.endpoint.annotation.*;
 import org.springframework.stereotype.Component;
-import reactor.core.publisher.Mono;
 
-import java.util.Collections;
 import java.util.Map;
 
 @Component
@@ -17,36 +15,37 @@ public class LogIndexManagementEndpoint {
     private LogsManagementService managementService;
 
     @ReadOperation
-    public Mono<Map<String, Object>> read(@Selector String operation) {
+    public Map<String, Object> read(@Selector String operation) {
         return switch (operation) {
-            case "exists" -> this.managementService
-                                        .existsIndex()
-                                        .map(exists -> Collections.singletonMap("index-exists", exists));
+            case "exists" -> Map.of("index-exists", this.managementService.existsIndex());
             case "information" -> readInformation();
-            default -> Mono.error(() -> new UnsupportedOperationException(operation));
+            default -> throw new UnsupportedOperationException(operation);
         };
     }
 
     @ReadOperation
-    public Mono<Map<String, Object>> readInformation() {
+    public Map<String, Object> readInformation() {
         return this.managementService.indexInfo();
     }
 
     @WriteOperation
-    public Mono<Boolean> write(@Selector String operation) {
+    public boolean write(@Selector String operation) {
         return switch (operation) {
             case "create" -> this.managementService.createIndex();
-            case "refresh" -> this.managementService.refreshIndex().thenReturn(true);
-            default -> Mono.error(() -> new UnsupportedOperationException(operation));
+            case "refresh" -> {
+                this.managementService.refreshIndex();
+                yield true;
+            }
+            default -> throw new UnsupportedOperationException(operation);
         };
     }
 
     @DeleteOperation
-    public Mono<Boolean> delete(@Selector String operation) {
+    public boolean delete(@Selector String operation) {
         if ("drop".equals(operation)) {
             return this.managementService.dropIndex();
         }
 
-        return Mono.error(() -> new UnsupportedOperationException(operation));
+        throw new UnsupportedOperationException(operation);
     }
 }
