@@ -7,9 +7,7 @@ import org.springframework.boot.actuate.endpoint.annotation.ReadOperation;
 import org.springframework.boot.actuate.endpoint.annotation.Selector;
 import org.springframework.boot.actuate.endpoint.annotation.WriteOperation;
 import org.springframework.util.StringUtils;
-import reactor.core.publisher.Mono;
 
-import java.util.Collections;
 import java.util.Map;
 
 abstract class MongoDBCollectionManagementEndpoint<T extends MongoDBManagementService> {
@@ -21,35 +19,35 @@ abstract class MongoDBCollectionManagementEndpoint<T extends MongoDBManagementSe
     }
 
     @ReadOperation
-    public Mono<Map<String, Object>> read(@Selector String operation) {
+    public Map<String, Object> read(@Selector String operation) {
         return switch (operation) {
-            case "exists" -> this.managementService
-                                    .existsCollection()
-                                    .map(exists -> Collections.singletonMap("collection-exists", exists));
+            case "exists" -> Map.of("collection-exists", this.managementService.existsCollection());
             case "information" -> this.managementService.indexesInfo();
-            default -> Mono.error(() -> new UnsupportedOperationException(operation));
+            default -> throw new UnsupportedOperationException(operation);
         };
     }
 
     @WriteOperation
-    public Mono<Boolean> write(@Selector String operation) {
+    public boolean write(@Selector String operation) {
         if ("create".equals(operation)) {
-            return this.managementService.createCollection().thenReturn(true);
+            this.managementService.createCollection();
+            return true;
         }
 
-        return Mono.error(() -> new UnsupportedOperationException(operation));
+        throw new UnsupportedOperationException(operation);
     }
 
     @DeleteOperation
-    public Mono<Boolean> delete(@Selector(match = Selector.Match.ALL_REMAINING) String[] operation) {
+    public boolean delete(@Selector(match = Selector.Match.ALL_REMAINING) String[] operation) {
         if (operation == null || operation.length == 0) {
-            return Mono.error(() -> new UnsupportedOperationException("Operation not specified"));
+            throw new UnsupportedOperationException("Operation not specified");
         }
 
         if ("drop".equals(operation[0])) {
-            return this.managementService.dropCollection().thenReturn(true);
+            this.managementService.dropCollection();
+            return true;
         }
 
-        return Mono.error(() -> new UnsupportedOperationException(StringUtils.arrayToDelimitedString(operation, "/")));
+        throw new UnsupportedOperationException(StringUtils.arrayToDelimitedString(operation, "/"));
     }
 }
