@@ -5,12 +5,11 @@ import org.springframework.boot.actuate.endpoint.annotation.DeleteOperation;
 import org.springframework.boot.actuate.endpoint.annotation.Endpoint;
 import org.springframework.boot.actuate.endpoint.annotation.ReadOperation;
 import org.springframework.boot.actuate.endpoint.annotation.Selector;
-import org.springframework.data.redis.core.ReactiveRedisTemplate;
+import org.springframework.data.redis.cache.CacheKeyPrefix;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.data.redis.core.ScanOptions;
 import org.springframework.stereotype.Component;
-import reactor.core.publisher.Mono;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 
@@ -19,14 +18,14 @@ import java.util.Objects;
 public class RedisCacheManagementEndpoint {
 
     @Autowired
-    private ReactiveRedisTemplate<String, Object> template;
+    private RedisTemplate<String, Object> template;
 
     @DeleteOperation
-    public Mono<Void> clear(@Selector String cacheKey) {
+    public void clear(@Selector String cacheKey) {
         Objects.requireNonNull(cacheKey, "cacheKey");
         final String keysPattern = switch (cacheKey) {
-            case "statistics", "users" -> cacheKey + ":*";
-            case "all" -> "*:*";
+            case "statistics", "users" -> cacheKey + CacheKeyPrefix.SEPARATOR + "*";
+            case "all" -> "*" + CacheKeyPrefix.SEPARATOR + "*";
             default -> throw new IllegalArgumentException("Unsupported cache key");
         };
 
@@ -34,17 +33,19 @@ public class RedisCacheManagementEndpoint {
                                             .scanOptions()
                                                 .match(keysPattern)
                                             .build();
-        return this.template.scan(scanOptions)
-                            .transform(this.template::delete)
-                            .then();
+        try (final var cursor = this.template.scan(scanOptions)) {
+            while (cursor.hasNext()) {
+                this.template.delete(cursor.next());
+            }
+        }
     }
 
     @ReadOperation
-    public Mono<Map<String, Object>> info(@Selector String cacheKey) {
+    public Map<String, Object> info(@Selector String cacheKey) {
         final String cacheKeyResult = cacheKey == null ? "all" : cacheKey;
         final String keysPattern = switch (cacheKeyResult) {
-            case "statistics", "users" -> cacheKey + ":*";
-            case "all" -> "*:*";
+            case "statistics", "users" -> cacheKey + CacheKeyPrefix.SEPARATOR + "*";
+            case "all" -> "*" + CacheKeyPrefix.SEPARATOR + "*";
             default -> throw new IllegalArgumentException("Unsupported cache key");
         };
 
@@ -52,8 +53,9 @@ public class RedisCacheManagementEndpoint {
                                             .scanOptions()
                                                 .match(keysPattern)
                                             .build();
-        return this.template.scan(scanOptions)
-                            .count()
-                            .map(count -> Collections.singletonMap(cacheKeyResult, count));
+
+        try (final var cursor = this.template.scan(scanOptions)) {
+            return Map.of(cacheKeyResult, cursor.stream().count());
+        }
     }
 }
